acessando ao formControl no HTML e CSS de validaçao dos campos

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,18 +1,25 @@
 <form class="row g-2 gy-2" [formGroup]="formulario" (ngSubmit)="onSubmit()">
-    <div class="col-md-6">
+    <div class="col-md-6" [ngClass]="aplicaCSSErro('nome')">
         <div class="form-floating mb-3">
             <!-- No lugar de name="nome", para o Angular identificar o campo com o objeto formulário,
             devemos fazer formControlName="nome"
         Ou seja, qual é o nome utilizado no formBuilder. -->
             <input type="text" class="form-control" id="nome" placeholder="Seu nome" formControlName="nome">
             <label for="nome">Nome</label>
+            <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('nome')" msgErro="Nome é obrigatório">
+            </app-campo-control-erro>
         </div>
+        
     </div>
 
     <div class="col-md-6">
-        <div class="form-floating mb-3 col-md-12">
+        <div class="form-floating mb-3">
             <input type="email" class="form-control" id="email" placeholder="nome@email.com" formControlName="email">
             <label for="email">E-mail</label>
+            <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('email')" msgErro="Email é obrigatório">
+            </app-campo-control-erro>
+            <app-campo-control-erro [mostrarErro]="verificaEmailInvalido()" msgErro="Email inválido">
+            </app-campo-control-erro>
         </div>
     </div>
 
