--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -4,7 +4,7 @@
             <!-- No lugar de name="nome", para o Angular identificar o campo com o objeto formulário,
             devemos fazer formControlName="nome"
         Ou seja, qual é o nome utilizado no formBuilder. -->
-            <input type="text" class="form-control" id="nome" placeholder="Seu nome" formControlName="nome">
+            <input type="text" class="form-control" id="nome" placeholder="Seu nome" formControlName="nome" [ngClass]="aplicaCSSErro('nome')">
             <label for="nome">Nome</label>
             <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('nome')" msgErro="Nome é obrigatório">
             </app-campo-control-erro>
@@ -14,7 +14,7 @@
 
     <div class="col-md-6">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="email" placeholder="nome@email.com" formControlName="email">
+            <input type="email" class="form-control" id="email" placeholder="nome@email.com" formControlName="email" [ngClass]="aplicaCSSErro('email')">
             <label for="email">E-mail</label>
             <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('email')" msgErro="Email é obrigatório">
             </app-campo-control-erro>
@@ -23,11 +23,13 @@
         </div>
     </div>
 
-    <div ngModelGroup="endereco" class="row g-2 gy-2">
+    <div class="row g-2 gy-2">
         <div class="col-md-3">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="cep" name="cep" placeholder="13.000-000">
+                <input type="text" class="form-control" id="cep" name="cep" placeholder="" [ngClass]="aplicaCSSErro('cep')" formControlName="cep">
                 <label for="cep">CEP</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('cep')" msgErro="CEP é obrigatório">
+                </app-campo-control-erro>
             </div>
         </div>
 
@@ -40,36 +42,46 @@
 
         <div class="col-md-10">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="rua" name="rua" placeholder="13.000-000">
+                <input type="text" class="form-control" id="rua" name="rua" placeholder="" [ngClass]="aplicaCSSErro('rua')" formControlName="rua">
                 <label for="rua">Rua</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('rua')" msgErro="Rua é obrigatório">
+                </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-2">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="numero" name="numero" placeholder="">
+                <input type="text" class="form-control" id="numero" name="numero" placeholder="" [ngClass]="aplicaCSSErro('numero')" formControlName="numero">
                 <label for="rua">Número</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('numero')" msgErro="Número é obrigatório">
+                </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-5">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="bairro" name="bairro" placeholder="13.000-000">
+                <input type="text" class="form-control" id="bairro" name="bairro" placeholder="" [ngClass]="aplicaCSSErro('bairro')" formControlName="bairro">
                 <label for="bairro">Bairro</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('bairro')" msgErro="Bairro é obrigatório">
+                </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="cidade" name="cidade" placeholder="13.000-000">
+                <input type="text" class="form-control" id="cidade" name="cidade" placeholder="" [ngClass]="aplicaCSSErro('cidade')" formControlName="cidade">
                 <label for="cidade">Cidade</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('cidade')" msgErro="Cidade é obrigatório">
+                </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-3">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="estado" name="estado">
+                <input type="text" class="form-control" id="estado" name="estado" [ngClass]="aplicaCSSErro('estado')" formControlName="estado">
                 <label for="estado">Estado</label>
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('estado')" msgErro="Estado é obrigatório">
+                </app-campo-control-erro>
             </div>
 
         </div>
