--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -85,9 +85,12 @@
         </div>
 
         <div class="col-md-3">
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="estado" name="estado" [ngClass]="aplicaCSSErro('endereco.estado')" formControlName="estado">
+            <div class="mb-3">
                 <label for="estado">Estado</label>
+                <select type="text" class="form-select" id="estado" name="estado" [ngClass]="aplicaCSSErro('endereco.estado')" formControlName="estado">
+                    <option *ngFor="let estado of estados | async" [value]="estado.sigla">{{ estado.nome }}</option>                    
+                </select>
+                
                 <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.estado')" msgErro="Estado é obrigatório">
                 </app-campo-control-erro>
             </div>
