--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -4,17 +4,19 @@
             <!-- No lugar de name="nome", para o Angular identificar o campo com o objeto formulário,
             devemos fazer formControlName="nome"
         Ou seja, qual é o nome utilizado no formBuilder. -->
-            <input type="text" class="form-control" id="nome" placeholder="Seu nome" formControlName="nome" [ngClass]="aplicaCSSErro('nome')">
+            <input type="text" class="form-control" id="nome" placeholder="Seu nome" formControlName="nome"
+                [ngClass]="aplicaCSSErro('nome')">
             <label for="nome">Nome</label>
             <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('nome')" msgErro="Nome é obrigatório">
             </app-campo-control-erro>
         </div>
-        
+
     </div>
 
     <div class="col-md-6">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="email" placeholder="nome@email.com" formControlName="email" [ngClass]="aplicaCSSErro('email')">
+            <input type="email" class="form-control" id="email" placeholder="nome@email.com" formControlName="email"
+                [ngClass]="aplicaCSSErro('email')">
             <label for="email">E-mail</label>
             <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('email')" msgErro="Email é obrigatório">
             </app-campo-control-erro>
@@ -27,8 +29,7 @@
         <div class="col-md-3">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="cep" name="cep" placeholder=""
-                 [ngClass]="aplicaCSSErro('endereco.cep')" formControlName="cep"
-                 (blur)="consultaCEP()">
+                    [ngClass]="aplicaCSSErro('endereco.cep')" formControlName="cep" (blur)="consultaCEP()">
                 <label for="cep">CEP</label>
                 <!-- Outra maneira, se o cep fosse um objeto que tivesse mais coisas dentro, outros atributos:
                 [mostrarErro]="formulario.get('endereco.cep.outro').valid"
@@ -36,50 +37,60 @@
                 [mostrarErro]="formulario.get('endereco.cep').valid"
                 Outra maneira, por meio de controls:
                 [mostrarErro]="formulario.controls['endereco'].controls['cep']"-->
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.cep')" msgErro="CEP é obrigatório">
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.cep')"
+                    msgErro="CEP é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-9">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="complemento" name="complemento" formControlName="complemento">
+                <input type="text" class="form-control" id="complemento" name="complemento"
+                    formControlName="complemento">
                 <label for="complemento">Complemento</label>
             </div>
         </div>
 
         <div class="col-md-10">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="rua" name="rua" placeholder="" [ngClass]="aplicaCSSErro('endereco.rua')" formControlName="rua">
+                <input type="text" class="form-control" id="rua" name="rua" placeholder=""
+                    [ngClass]="aplicaCSSErro('endereco.rua')" formControlName="rua">
                 <label for="rua">Rua</label>
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.rua')" msgErro="Rua é obrigatório">
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.rua')"
+                    msgErro="Rua é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-2">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="numero" name="numero" placeholder="" [ngClass]="aplicaCSSErro('endereco.numero')" formControlName="numero">
+                <input type="text" class="form-control" id="numero" name="numero" placeholder=""
+                    [ngClass]="aplicaCSSErro('endereco.numero')" formControlName="numero">
                 <label for="rua">Número</label>
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.numero')" msgErro="Número é obrigatório">
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.numero')"
+                    msgErro="Número é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-5">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="bairro" name="bairro" placeholder="" [ngClass]="aplicaCSSErro('endereco.bairro')" formControlName="bairro">
+                <input type="text" class="form-control" id="bairro" name="bairro" placeholder=""
+                    [ngClass]="aplicaCSSErro('endereco.bairro')" formControlName="bairro">
                 <label for="bairro">Bairro</label>
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.bairro')" msgErro="Bairro é obrigatório">
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.bairro')"
+                    msgErro="Bairro é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="cidade" name="cidade" placeholder="" [ngClass]="aplicaCSSErro('endereco.cidade')" formControlName="cidade">
+                <input type="text" class="form-control" id="cidade" name="cidade" placeholder=""
+                    [ngClass]="aplicaCSSErro('endereco.cidade')" formControlName="cidade">
                 <label for="cidade">Cidade</label>
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.cidade')" msgErro="Cidade é obrigatório">
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.cidade')"
+                    msgErro="Cidade é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
@@ -87,60 +98,61 @@
         <div class="col-md-3">
             <div class="mb-3">
                 <label for="estado">Estado</label>
-                <select type="text" class="form-select" id="estado" name="estado" [ngClass]="aplicaCSSErro('endereco.estado')" formControlName="estado">
-                    <option *ngFor="let estado of estados | async" [value]="estado.sigla">{{ estado.nome }}</option>                    
+                <select type="text" class="form-select" id="estado" name="estado"
+                    [ngClass]="aplicaCSSErro('endereco.estado')" formControlName="estado">
+                    <option *ngFor="let estado of estados | async" [value]="estado.sigla">{{ estado.nome }}</option>
                 </select>
-                
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.estado')" msgErro="Estado é obrigatório">
+
+                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.estado')"
+                    msgErro="Estado é obrigatório">
                 </app-campo-control-erro>
             </div>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">
         <div class="col-md-3">
             <div class="mb-3">
                 <label for="cargo">Cargo</label>
-                <select class="form-select" id="cargo"
-                 formControlName="cargo"
-                 [compareWith]="compararCargos">
+                <select class="form-select" id="cargo" formControlName="cargo" [compareWith]="compararCargos">
                     <option *ngFor="let cargo of cargos" [ngValue]="cargo">{{ cargo.desc }}</option>
-                    <!-- Se queremos comparar objetos complexos, não apenas pela sua referência, que é o que o angular faz,
-                    temos que usar o ngValue. -->
-                    <!-- Ou seja, se você está trabalhando com uma string, um number, etc, usa value
-                    porém, se vai trabalhar com objetos, usa ngValue
-                    e também implemente uma função compareWith para que o angular compare os valores.-->
                 </select>
             </div>
         </div>
         <div class="col-md-3">
             <div class="mb-3">
                 <label for="tecnologia">Tecnologias</label>
-                <select multiple class="form-select" id="tecnologia"
-                 formControlName="tecnologias">
-                    <option *ngFor="let tecnologia of tecnologias" [value]="tecnologia.nome">{{ tecnologia.desc }}</option>
+                <select multiple class="form-select" id="tecnologia" formControlName="tecnologias">
+                    <option *ngFor="let tecnologia of tecnologias" [value]="tecnologia.nome">{{ tecnologia.desc }}
+                    </option>
                 </select>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="mb-3">
+                <label for="newsletter">News Letter</label>
+                <div id="newsletter" class="row">
+                    <div class="col-sm-4" *ngFor="let item of newsletterOp">
+                        <input class="form-check-input" type="radio"
+                        formControlName="newsletter" [value]="item.valor">
+                        <label class="form-check-label">
+                            {{item.desc}}
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <!--
-            <button type="submit" class="btn btn-primary col-sm-3" [disabled]="!formulario.valid">
-            Enviar
-        </button> 
-        Essa abordagem acima pode ser usada sem problemas, especialmente em formulários pequenos,
-    como em uma tela de login, mas a medida que nosso formulário começa a crescer, isso pode não
-    ficar tão simples para o usuário.
-        -->
-        <button type="submit" class="btn btn-primary col-sm-3" >
+        <button type="submit" class="btn btn-primary col-sm-3">
             Enviar
         </button>
         <button class="btn btn-secondary col-sm-3" (click)="resetar()">
             Cancelar
         </button>
-        <button class="btn btn-primary col-sm-3" (click)="setarCargo()" >
+        <button class="btn btn-primary col-sm-3" (click)="setarCargo()">
             Setar cargo
         </button>
-        <button class="btn btn-info col-sm-3" (click)="setarTecnologias()" >
+        <button class="btn btn-info col-sm-3" (click)="setarTecnologias()">
             Setar tecnologias
         </button>
     </div>
