Formulários reativos: FormArray: Checkboxes Dinâmicos (formArrayName, formControlName)

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,4 +1,4 @@
-<form class="row g-2 gy-2" [formGroup]="formulario" (ngSubmit)="onSubmit()">
+<form class="g-2 gy-2 row" [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="col-md-6" [ngClass]="aplicaCSSErro('nome')">
         <div class="form-floating mb-3">
             <!-- No lugar de name="nome", para o Angular identificar o campo com o objeto formulário,
@@ -144,17 +144,41 @@
     <div class="form-group">
         <div class="col-md-3">
             <div class="form-check" [ngClass]="aplicaCSSErro('termos')">
-                <input class="form-check-input" type="checkbox" 
-                id="flexCheckDefault" formControlName="termos">
-                <label class="form-check-label" for="flexCheckDefault">
+                <input class="form-check-input" type="checkbox" id="termos" formControlName="termos">
+                <label class="form-check-label" for="termos">
                     Aceitar os termos
                 </label>
             </div>
-            <app-campo-control-erro [mostrarErro]="verificaInvalid('termos')"
-                msgErro="Por favor, aceite os termos">
+            <app-campo-control-erro [mostrarErro]="verificaInvalid('termos')" msgErro="Por favor, aceite os termos">
             </app-campo-control-erro>
         </div>
     </div>
+
+    <div class="form-group col-md-4 row">
+        <div class="form-check" *ngFor="let item of frameworks; let i = index"
+        formArrayName="frameworks">
+            <input class="form-check-input" type="checkbox"
+            [formControlName]="i" (click)="debugar(item)" #item>
+            <label class="form-check-label">
+                {{item}}
+            </label>
+        </div>
+    </div>
+
+    <!--
+        DESTA MANEIRA ABAIXO DÁ ERRO. NÃO SEI O PORQUÊ.
+        <div class="form-group col-md-4 row">
+        <div class="form-check" *ngFor="let item of formulario.get('frameworks')?.value; let i = index"
+        formArrayName="frameworks">
+            <input class="form-check-input" type="checkbox"
+            [formControlName]="i" (click)="debugar(item)" #item>
+            <label class="form-check-label">
+                {{frameworks[i]}}
+            </label>
+        </div>
+    </div> -->
+
+
     <div class="row">
         <button type="submit" class="btn btn-primary col-sm-3">
             Enviar
