--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -37,8 +37,11 @@
                 [mostrarErro]="formulario.get('endereco.cep').valid"
                 Outra maneira, por meio de controls:
                 [mostrarErro]="formulario.controls['endereco'].controls['cep']"-->
-                <app-campo-control-erro [mostrarErro]="verificaInvalidTouched('endereco.cep')"
+                <app-campo-control-erro [mostrarErro]="verificaRequired('endereco.cep')"
                     msgErro="CEP é obrigatório">
+                </app-campo-control-erro>
+                <app-campo-control-erro [mostrarErro]="!!formulario.get('endereco.cep')?.hasError('cepInvalido')"
+                    msgErro="CEP inválido">
                 </app-campo-control-erro>
             </div>
         </div>
