--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -1,1 +1,40 @@
-<p>cursos-lista works!</p>
+<div class="card">
+    <div class="card-header">
+        <div class="row">
+            <div class="col">
+                <h5>Lista de cursos</h5>
+            </div>
+            <div class="col text-end">
+                <button class="btn btn-primary" [routerLink]="['novo']">Novo curso</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="card-body">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Curso</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let curso of cursos">
+                    <td>{{ curso.id }}</td>
+                    <td> {{ curso.nome }} </td>
+                    <td>
+                        <div class="text-end">
+                            <button class="btn btn-outline-warning mb-1 btn-sm">
+                                Atualizar
+                            </button>
+                            <button class="btn btn-outline-danger mb-1 btn-sm">
+                                Remover
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
